! Most browsers didn't like my latest changes to menu paddings. Removed an old min-height: 0 hack that seemed to bother them... Yeah, don't ask me, it's kinda obscure to me too. Tested in Chrome, Opera 11.5/12, IE 7/8/9 and FF7. (index.css) - Removed IE6 iframe shim support from menu code. The reasoning: IE6 users are noobs. They don't install forums. They wouldn't even notice if a menu item is behind a form element. While I'm okay providing shims for IE6 when it doesn't add code to *other* users, in this case IE6 represented a 25% overhead for the menu code, and 5% of the script file. For everyone. Now it's gone. Good riddance. (script.js, index.ie6.css) * Made delimiters more generic for the false/true JS minification trick. Saves 7 bytes off the gzipped script file. What? A byte is a byte. (Subs-Cache.php) * Positioned menus 3 pixels further down the top-level entries, to give more breathing space to the menu arrows. Feedback welcome for Wine. Works fine in other skins. (script.js, index.css) * Droid Sans has no italics, so adding a small hack for that until I'm through with that font and switch back to something else. (Warm/index.css) ! Forgot to fix the additional JS file list for IE6 in Wine -- only Warm and Wuthering were done. (skin.xml)

--- a/Themes/default/skins/Warm/index.css
+++ b/Themes/default/skins/Warm/index.css
@@ -9,6 +9,9 @@ body
 	color: #333
 	padding: 0
 
+em
+	font-family: $ita_font
+
 #offside
 	display: table-cell
 
@@ -248,4 +251,5 @@ $body_bg   = #f6f8ef
 $side_bg   = #e8e3cb
 $footer_bg = lighten($side_bg, 5%)
 $main_font = "Droid Sans", "PT Sans", "Segoe UI", "Trebuchet MS", Arial, sans-serif
+$ita_font = "Segoe UI", "Trebuchet MS", Arial, sans-serif
 $post_font = 9.5pt/140% "Lucida Sans Unicode", Verdana, $main_font
